# vipe

./: .gitignore  ERRORFIX.md  LATER_PLANS.md  README.md  WORKLOG.md  notes.md  pyproject.toml  task_plan.md
configs/pipeline/: lyra.yaml
scripts/pixi/: activate.sh  install_cli.sh  uninstall_cli.sh
vipe/priors/depth/: __init__.py  moge.py
vipe/priors/depth/videodepthanything/: __init__.py
vipe/priors/track_anything/groundingdino/models/main/: bertwarper.py
